# jnp3-ocaml

./: .gitignore  README.md  database.bootp  default.nix  dune-project  jnp3_ocaml.opam  scaffold
lib/: dune
lib/message/: address.ml  genericInt.ml  mac.ml  message.ml  op.ml
lib/server/: database.ml  mac.ml  server.ml
lib/utils/: inet.ml  str.ml  utils.ml
